Fake login page (about page)

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,2 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      About
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-  <h1>About us...</h1>
+<ion-content padding class="masters">
 </ion-content>
